pbc_contract_codegen/tests/action/fail/zk/missing_zk_state_zk_on_secret_input.stderr
error: custom attribute panicked
 --> tests/action/fail/zk/missing_zk_state_zk_on_secret_input.rs:5:1
  |
5 | #[zk_on_secret_input(shortname = 0x04)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Functions annotated with this macro must have at least 3 arguments, but had only 2
